--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,21 @@
 <resources>
-    <string name="app_name">MSB - Marsz Sprint Bieganie</string>
+    <string name="app_name">Marsz Sprint Bieganie</string>
+    <string name="button_send">Button</string>
+    <string name="button_kolarstwo">Kolarstwo</string>
+    <string name="button_marsz">Marsz</string>
+    <string name="button_sprint">Sprint</string>
+    <string name="button_kajakarstwo">Kajakarstwo</string>
+    <string name="button_send2">Wcisnij</string>
+    <string name="text_view"></string>
+    <string name="start_new_training">Rozpocznij nowy trening</string>
+    <string name="motivation">Na pewno dałeś z siebie wszystko!</string>
+    <string name="last_training_text">Twój ostatni trening:</string>
+
+    <string name="paused"> Wznów </string>
+    <string name="started"> Pauza </string>
+    <string name="end_training"> Zakończ trening </string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
