Dodanie widoku statystyk.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,6 @@
     <string name="checkYourFriendsList">Sprawdź, kto jest aktywny z twoich znajomych:</string>
     <string name="friendsListTxt">Lista znajomych</string>
     <string name="welcomeText">Witaj, Gabriel!</string>
+    <string name="statisticChoose">Wybierz okres aktywności</string>
 
 </resources>
